--- a/src/View/Home/love_robots.html.twig
+++ b/src/View/Home/love_robots.html.twig
@@ -6,20 +6,26 @@
 
 
 {% block content %}
+<header id="home">
+            
+	<section class="hero" id="hero" style="background-image: url('https://zupimages.net/up/21/19/oocx.jpeg');">
+	  <div class="container">
+		<div class="row">
+		  <div class="col-md-12 text-right navicon">
+			<a id="nav-toggle" class="nav_slide_button" href="#"><span></span></a>
+		  </div>
+		</div>
+		<div class="row">
+		  <div class="col-md-8 col-md-offset-2 text-center inner">
+			<h1 class="animated fadeInDown" style="color: rgb(168, 168, 168); font-size: 60px;">ADULTES<span style="color: rgb(240, 240, 240);">+ 18 ANS</span></h1>
+      <p class="animated fadeInUp delay-05s" style="color: rgb(168, 168, 168); font-size: 20px;">Emotions, tentations, vibrations...</p>
+		  </div>
+		</div>
+	  </div>
+	</section>
+  </header>
+
 <div class="hot">
-</br>
-</br>
-</br>
-</br>
-</br>
-</br>
-
-
-
-<div class="row">
-    <h1 class="text-center mt-3 mb-5"> ADULTES + 18 ANS </h1>
-    <img class="img-responsive cc-img" src="">
-</div>
 
 <section class="rounded mx-auto d-block">
 
@@ -51,6 +57,9 @@
 
 </section>
 
+<div class=text-center>
+  <a class="button m-2" href="/">Home</a>
+  </div>
 </br>
 </br>
 </br>
