--- a/src/View/Composants/_nav.html.twig
+++ b/src/View/Composants/_nav.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav">
+{#<nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav">
         <div class="container"><a class="navbar-brand" href="/">Roboxing</a><button data-bs-toggle="collapse" data-bs-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-align-justify"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
@@ -16,4 +16,31 @@
                 </ul>
             </div>
         </div>
+</nav> #}
+
+<nav>
+    <div class="container-fluid">
+        <div class="row">
+        <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2">
+            <nav class="pull">
+                <ul class="top-nav">
+                    <li><a href="/" style="font-size: 20px;">Home<span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
+                    <li><a href="/home/about" style="font-size: 15px;">Le Concept<span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
+                    <li><a  href="/api/getnasapic" style="font-size: 15px;">Participer<span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
+                    <li><a href="/home/love_robots" style="color:pink; font-size: 15px;">Frictionner vos boulons<span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
+                    <li><a href="/home/contact" style="font-size: 15px;">Contact<span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
+                    {% if session.user is not defined %}
+                    
+                    <li ><a href="/home/login" style="font-size: 15px;">Se connecter<span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
+                    {% endif %}
+                    {% if session.user is defined %}
+                    <li ><a href="/home/pari" style="font-size: 15px;">Miser<span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
+                    <li><a href="/user/profil" style="font-size: 15px;">Profil<span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
+                    <li><a href="/home/logout" style="font-size: 15px;">Déconnexion<span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
+                    {% endif %}
+                  </ul>
+            </nav>
+        </div>
+        </div>
+    </div>
 </nav>
