--- a/src/View/Home/about.html.twig
+++ b/src/View/Home/about.html.twig
@@ -1,4 +1,4 @@
-{% extends 'layout.html.twig' %}
+{# {% extends 'layout.html.twig' %}
 
 {% block content %}
 
@@ -155,8 +155,171 @@
 </br>
 </br>
 
+{% endblock %} #}
 
+{% extends 'layout.html.twig' %}
 
+{% block content %}
+<header id="home">
+            
+	<section class="hero" id="hero" style="background-image: url('https://zupimages.net/up/21/19/kvy3.jpeg');">
+	  <div class="container">
+		<div class="row">
+		  <div class="col-md-12 text-right navicon">
+			<a id="nav-toggle" class="nav_slide_button" href="#"><span></span></a>
+		  </div>
+		</div>
+		<div class="row">
+		  <div class="col-md-8 col-md-offset-2 text-center inner">
+			<h1 class="animated fadeInDown">EXPLICATION EN<span>4 ÉTAPES</span></h1>
+			
+		  </div>
+		</div>
+	  </div>
+	</section>
+</header>
 
+</br>
+</br>
 
+<div class="container-fluid pt-5 mt-5 px-0" id="body">
+    <div class="row smpl-step" style="border-bottom: 0; min-width: 500px;">
+        <div class="col-xs-3 smpl-step-step complete">
+            <div class="text-center smpl-step-num">Step 1</div>
+            <div class="progress">
+                <div class="progress-bar"></div>
+            </div>
+            <a class="smpl-step-icon"><i class="fa fa-user" style="font-size: 60px; padding-left: 12px; padding-top: 3px; color: black;"></i></a>
+            <div class="smpl-step-info text-center">Choisis ton robot et ta discipline</div>
+        </div>
+
+        <div class="col-xs-3 smpl-step-step complete">           
+            <div class="text-center smpl-step-num">Step 2</div>
+            <div class="progress">
+                <div class="progress-bar"></div>
+            </div>
+            <a class="smpl-step-icon"><i class="fa fa-repeat" style="font-size: 60px; padding-left: 7px; padding-top: 7px; color: black;"></i></a>
+            <div class="smpl-step-info text-center"> Découvre le lieu </div>
+        </div>
+        <div class="col-xs-3 smpl-step-step active">          
+            <div class="text-center smpl-step-num">Step 3</div>
+            <div class="progress">
+                <div class="progress-bar"></div>
+            </div>
+            <a class="smpl-step-icon"><i class="fa fa-dollar" style="font-size: 60px; padding-left: 18px; padding-top: 5px; color: black;"></i></a>
+            <div class="smpl-step-info text-center">Procède au paiement</div>
+        </div>
+        <div class="col-xs-3 smpl-step-step disabled">           
+            <div class="text-center smpl-step-num">Step 4</div>
+            <div class="progress">
+                <div class="progress-bar"></div>
+            </div>
+            <a class="smpl-step-icon"><i class="fa fa-download" style="font-size: 60px; padding-left: 8px; padding-top: 4px; color: black; opacity: 0.3;"></i></a>
+            <div class="smpl-step-info text-center">Attendre le jour J du combat</div>
+        </div>
+    </div>
+</div>
+<div class=text-center>
+    <a class="button m-2" href="/">Home</a>
+    </div>
+
+<style>
+    .smpl-step {
+        margin-top: 40px;
+    }
+    .smpl-step {
+        border-bottom: solid 1px #e0e0e0;
+        padding: 0 0 10px 0;
+    }
+
+    .smpl-step > .smpl-step-step {
+        padding: 0;
+        position: relative;
+    }   
+
+    .smpl-step > .smpl-step-step .smpl-step-num {
+        font-size: 17px;
+        margin-top: -20px;
+        margin-left: 47px;
+    }
+
+    .smpl-step > .smpl-step-step .smpl-step-info {
+        font-size: 14px;
+        padding-top: 27px;
+    }
+
+    .smpl-step > .smpl-step-step > .smpl-step-icon {
+        position: absolute;
+        width: 70px;
+        height: 70px;
+        display: block;
+        background: #5CB85C;
+        top: 45px;
+        left: 50%;
+        margin-top: -35px;
+        margin-left: -15px;
+        border-radius: 50%;
+    }
+
+    .smpl-step > .smpl-step-step > .progress {
+        position: relative;
+        border-radius: 0px;
+        height: 8px;
+        box-shadow: none;
+        margin-top: 37px;
+    }
+
+   .smpl-step > .smpl-step-step > .progress > .progress-bar {
+       width: 0px;
+       box-shadow: none;
+       background: #428BCA;
+   }
+
+    .smpl-step > .smpl-step-step.complete > .progress > .progress-bar {
+        width: 100%;
+    }
+
+    .smpl-step > .smpl-step-step.active > .progress > .progress-bar {
+        width: 50%;
+    }
+
+    .smpl-step > .smpl-step-step:first-child.active > .progress > .progress-bar {
+        width: 0%;
+    }
+
+    .smpl-step > .smpl-step-step:last-child.active > .progress > .progress-bar {
+        width: 100%;
+    }
+
+    .smpl-step > .smpl-step-step.disabled > .smpl-step-icon {
+        background-color: #f5f5f5;
+    }
+
+    .smpl-step > .smpl-step-step.disabled > .smpl-step-icon:after {
+        opacity: 0;
+    }
+
+    .smpl-step > .smpl-step-step:first-child > .progress {
+        left: 50%;
+        width: 50%;
+    }
+
+    .smpl-step > .smpl-step-step:last-child > .progress {
+        width: 50%;
+    }
+
+    .smpl-step > .smpl-step-step.disabled a.smpl-step-icon {
+        pointer-events: none;
+    }
+</style>
+
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
 {% endblock %}
+
