--- a/src/View/Home/login.html.twig
+++ b/src/View/Home/login.html.twig
@@ -1,8 +1,23 @@
 {% extends 'layout.html.twig' %}
 {% block title %} - Login {% endblock %}
 {% block content %}
-    
-
+<header id="home">
+            
+	<section class="hero" id="hero" style="background-image: none; padding: 15px;">
+	  <div class="container">
+		<div class="row">
+		  <div class="col-md-12 text-right navicon">
+			<a id="nav-toggle" class="nav_slide_button" href="#"><span></span></a>
+		  </div>
+		</div>
+		<div class="row">
+		  <div class="col-md-8 col-md-offset-2 text-center inner pt-0">
+			<h1 class="animated fadeInDown" style="padding: 15px;">CONNECTEZ - <span>VOUS</span></h1>
+		  </div>
+		</div>
+	  </div>
+	</section>
+</header>
     <div class="contact1">
 		<div class="container-contact1">
 			<div class="contact1-pic js-tilt" data-tilt>
@@ -10,9 +25,6 @@
 			</div>
 
 			<form method="POST" class="contact1-form validate-form">
-				<span class="contact1-form-title">
-					Connectez-vous
-				</span>
 
 				<div class="wrap-input1 validate-input" data-validate = "Name is required">
 					<input class="input1" type="text" name="username" placeholder="Pseudo">
@@ -24,7 +36,6 @@
                     </div>
                 {% endif %}
 				
-
 				<div class="wrap-input1 validate-input" data-validate = "Subject is required">
 					<input class="input1" type="password" name="password" placeholder="Mot de passe">
 					<span class="shadow-input1"></span>
@@ -47,6 +58,7 @@
 							<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
 						</span>
 					</button>
+                    <a href="/home/register"><input class="contact1-form-btn text-center m-2" value="S'inscrire"></a>
 				</div>
 			</form>
 		</div>
