--- a/src/View/Home/pari.html.twig
+++ b/src/View/Home/pari.html.twig
@@ -7,81 +7,99 @@
 
 {% block content %}
 
-</br>
-</br>
-</br>
-</br>
-</br>
-</br>
+<header id="home">
+            
+  <section class="hero" id="hero">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 text-right navicon">
+          <a id="nav-toggle" class="nav_slide_button" href="#"><span></span></a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2 text-center inner">
+          <h1 class="animated fadeInDown" style="color: rgb(122, 122, 122); font-size: 60px;">GAMBLING<span style="color: rgb(168, 168, 168);"></span></h1>
 
-
-
-<div class="row">
-    <h1 class="text-center mt-3 mb-5"> ADULTES + 18 ANS </h1>
-    <img class="img-responsive cc-img" src="">
-</div>
-
+        </div>
+      </div>
+    </div>
+  </section>
+</header>
 <section class="rounded mx-auto d-block">
-
-
-<div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" >
-  <div class="carousel-inner" >
-    <div class="carousel-item active">
-      <img src="https://zupimages.net/up/21/19/z44y.png" class="d-block w-20 h-15 p-5" >
+  <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" >
+    <div class="carousel-inner" >
+      <div class="carousel-item active">
+        <img src="https://zupimages.net/up/21/19/z44y.png" class="d-block w-20 h-15 p-5" >
+      </div>
+      <div class="carousel-item">
+        <img src="https://zupimages.net/up/21/19/yrb4.png" class="d-block w-20 h-15 p-5">
+      </div>
+      <div class="carousel-item">
+        <img src="https://zupimages.net/up/21/19/tp8z.png" class="d-block w-20 h-15 p-5" >
+      </div>
     </div>
-    <div class="carousel-item">
-      <img src="https://zupimages.net/up/21/19/yrb4.png" class="d-block w-20 h-15 p-5">
-    </div>
-    <div class="carousel-item">
-      <img src="https://zupimages.net/up/21/19/tp8z.png" class="d-block w-20 h-15 p-5" >
-    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
-
 </section>
-
-</br>
-</br>
-</br>
 
 <section class="container mt-5 justify-content-center">
 
-    <h2 class="text-center mt-3 mb-5"> JE PARIE SUR </h2>
+  <h2 class="text-center mt-3 mb-5"> JE PARIE SUR </h2>
 
-<select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
-  <option selected >CHOISIS TON ROBOT</option>
-  <option value="1">KassTronche</option>
-  <option value="2">KiPlante</option>
-  <option value="3">KiTrace</option>
-
-
-</select>
-
+  <select class="input1" style="border-radius: 30px; height: 30px;">
+    <option selected >CHOISIS TON ROBOT</option>
+    <option value="1">KassTronche</option>
+    <option value="2">KiPlante</option>
+    <option value="3">KiTrace</option>
+  </select>
 </section>
 
 </br>
 </br>
 
 <section class="container mt-5 d-flex justify-content-center">
-<select class="form-select form-select-lg" aria-label=".form-select-lg example">
-  <option selected>CHOISIS TA MISE</option>
-  <option value="1">$ 5</option>
-  <option value="2">$ 30</option>
-  <option value="3">$ 50</option>
-</select>
-</section>
+  <select class="input1" style="border-radius: 30px; height: 30px;">
+    <option selected>CHOISIS TA MISE</option>
+    <option value="1">$ 5</option>
+    <option value="2">$ 30</option>
+    <option value="3">$ 50</option>
+  </select>
+</section></br>
+<div class="text-center">
+<button type="button" class="button m-2 p-3" data-toggle="modal" data-target="#exampleModal" style="background-color: rgba(13, 58, 47, 0.842);">
+  JE MISE
+</button>
+</div></br>
 
-</br>
+<div id="exampleModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-confirm">
+      <div class="modal-content">
+          <div class="modal-header">
+              <div class="icon-box">
+                  <i class="material-icons">&#xE876;</i>
+              </div>				
+              <h4 class="modal-title">Merci !</h4>	
+          </div>
+          <div class="modal-body">
+              <p class="text-center">Votre paiement est confirmé ! Un e-mail de confirmation vient de vous être envoyé !</p>
+          </div>
+          <div class="modal-footer">
+              <button class="btn btn-success btn-block" ><a href="/home/payment" class="btn btn-success btn-block">OK</a></button>
+          
+              <button class="btn btn-success btn-block" ><a  class="btn btn-success btn-block" href="/">Retour</a></button>
+          </div>
+      </div>
+  </div>
+</div> 
 
-<section class="container mt-3 d-flex justify-content-center">
+{#<section class="container mt-3 d-flex justify-content-center">
   <a href="#myModal" class="trigger-btn" data-toggle="modal"><button type="button" class="btn btn-dark">JE MISE</button></a>
 </section>
 <div id="myModal" class="modal fade">
@@ -102,8 +120,7 @@
       </div>
     </div>
   </div>
-</div>   
-</section>
+</div> #} 
 
 
 {% endblock %}
