--- a/src/View/Home/register.html.twig
+++ b/src/View/Home/register.html.twig
@@ -1,6 +1,23 @@
 {% extends 'layout.html.twig' %}
 {% block title %} - Inscription {% endblock %}
 {% block content %}
+<header id="home">
+            
+	<section class="hero" id="hero" style="background-image: none; padding: 15px;">
+	  <div class="container">
+		<div class="row">
+		  <div class="col-md-12 text-right navicon">
+			<a id="nav-toggle" class="nav_slide_button" href="#"><span></span></a>
+		  </div>
+		</div>
+		<div class="row">
+		  <div class="col-md-8 col-md-offset-2 text-center inner pt-0">
+			<h1 class="animated fadeInDown" style="padding: 15px;">CREER VOTRE<span>COMPTE</span></h1>
+		  </div>
+		</div>
+	  </div>
+	</section>
+</header>
     <div class="contact1">
 		<div class="container-contact1">
 			<div class="contact1-pic js-tilt" data-tilt>
@@ -8,9 +25,7 @@
 			</div>
 
 			<form method="POST" class="contact1-form validate-form">
-				<span class="contact1-form-title">
-					Créer votre compte
-				</span>
+				
 
 				<div class="wrap-input1 validate-input" data-validate = "Name is required">
 					<input class="input1" type="text" name="username" placeholder="Pseudo">
