--- a/src/View/User/profil.html.twig
+++ b/src/View/User/profil.html.twig
@@ -2,19 +2,29 @@
 
 {% block content %}
 
-<ul class="nav nav-tabs my-5 justify-content-center" id="myTab" role="tablist">
-  <li class="nav-item" role="presentation">
-    <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Mes robots</button>
-  </li>
-  <li class="nav-item" role="presentation">
-    <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">Combats</button>
-  </li>
-</ul>
-<div class="tab-content" id="myTabContent">
-  <div class="tab-pane fade show active text-center" id="home" role="tabpanel" aria-labelledby="home-tab">
-  </div>
-  <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab"></div>
+<h1 class="text-center">Évènements :</h1>
+{% for order in orders %}
+<div><h2 class="text-center">Discipline :</h2></div>
+<div> <img src="{{order.type}}" style="height:40px">
 </div>
+<div><h2 class="text-center">Date :</h2></div>
+<div> <h4 class="text-center"> {{order.date}} </h4>
+</div>
+<div><h2 class="text-center">Lieu:</h2></div>
+<div> <img src="{{order.lieu}}" style="height:40px">
+</div>
+<div><h2 class="text-center">Nom du robot :</h2></div>
+<div> <h4 class="text-center"> {{order.name}} </h4>
+</div>
+<div><h2 class="text-center">Visuel du robot :</h2></div>
+<div> <img src="{{order.image}}" style="height:40px">
+</div> 
+<div><h2 class="text-center">Accessoire :</h2></div>
+<div><img src="{{order.accessoire}}" style="height:40px">
+</div>
+<hr></hr>
+{% endfor %}
+
 
 
 {% endblock %}
